--- a/test.html
+++ b/test.html
@@ -1,1 +1,14 @@
-you are a toto
+<!DOCTYPE html>
+<html>
+   <head>
+      <title>HTML Hyperlinks</title>
+   </head>
+
+   <body>
+      <h1>COP4635</h1>
+      <p>
+         this is a <a href="/test.txt">test</a> of a hyperlink in html.
+         this one should not work <a href="popTest.txt">dud</a>.
+      </p>
+   </body>
+</html>
