just need to comment

--- a/test.html
+++ b/test.html
@@ -7,7 +7,7 @@
    <body>
       <h1>COP4635</h1>
       <p>
-         this is a <a href="/test.txt">test</a> of a hyperlink in html.
+         this is a <a href="/test.png">test</a> of a hyperlink in html.
          this one should not work <a href="popTest.txt">dud</a>.
       </p>
    </body>
